ncap/Ifc58/include/IFCAPI.H

/* CICamera Class */
void IFCCALL CICamera_ReleaseCamFrame(CICamera *pCamera, CIFrame *frame);
pCIFrame IFCCALL CICamera_GetCamFrame(CICamera *pCamera);
pCInterrupt IFCCALL CICamera_CreateInterruptObject(CICamera *pCamera, ICAP_INTR_EVENT intrEvent);
void IFCCALL CICamera_UpdateParams(CICamera *pCamera);
BOOL IFCCALL CICamera_AcqParamSupported(CICamera *pCamera,ACQ_PARAMS_TYPE paramID);
double IFCCALL CICamera_GetAcqParam(CICamera *pCamera,ACQ_PARAMS_TYPE paramID,DWORD index);
void IFCCALL CICamera_SetAcqParam(CICamera *pCamera,ACQ_PARAMS_TYPE paramID, double value,DWORD index);
void IFCCALL CICamera_GetParamCaps(CICamera *pCamera,ACQ_PARAMS_TYPE paramID,PIFC_PARAM_CAPS lpParamCaps);
ACQ_PARAMS_TYPE IFCCALL CICamera_GetFirstParam(CICamera *pCamera,DWORD paramGroupMask);
ACQ_PARAMS_TYPE IFCCALL CICamera_GetNextParam(CICamera *pCamera,ACQ_PARAMS_TYPE paramID,DWORD paramGroupMask);
IFC_PARAM_GROUP_TYPE IFCCALL CICamera_GetFirstParamGroup(CICamera *pCamera);
IFC_PARAM_GROUP_TYPE IFCCALL CICamera_GetNextParamGroup(CICamera *pCamera,IFC_PARAM_GROUP_TYPE groupID);
void IFCCALL CICamera_GetGroupProperties(CICamera *pCamera,IFC_PARAM_GROUP_TYPE groupID,PIFC_PARAM_GROUP_PROPS lpGroupProps);
BOOL IFCCALL CICamera_GetFirstEnumArg(CICamera *pCamera,ACQ_PARAMS_TYPE paramID, IFC_ENUM_ARG *arg);
BOOL IFCCALL CICamera_GetNextEnumArg(CICamera *pCamera,ACQ_PARAMS_TYPE paramID, IFC_ENUM_ARG *arg);
BOOL IFCCALL CICamera_IsArgSupported(CICamera *pCamera,ACQ_PARAMS_TYPE paramID, double arg);
double IFCCALL CICamera_ClosestArgSupported(CICamera *pCamera,ACQ_PARAMS_TYPE paramID, double arg);
pSTRING IFCCALL CICamera_GetArgName(CICamera *pCamera,ACQ_PARAMS_TYPE paramID, double dArg);
double IFCCALL CICamera_GetArgValue(CICamera *pCamera,ACQ_PARAMS_TYPE paramID, const char *szArgName);
void IFCCALL CICamera_ReadLutBuf(CICamera *pCamera,LUTID_TYPE lutID, DWORD lutAdr, DWORD numEntries, pVOID buf,LUT_PORTION_TYPE lutPortion);
void IFCCALL CICamera_WriteLutBuf(CICamera *pCamera,LUTID_TYPE lutID, DWORD lutAdr,DWORD numEntries,pVOID buf,LUT_PORTION_TYPE lutPortion);
DWORD IFCCALL CICamera_ReadLutLoc(CICamera *pCamera,LUTID_TYPE lutID, DWORD lutAdr,LUT_PORTION_TYPE lutPortion);
void IFCCALL CICamera_WriteLutLoc(CICamera *pCamera,LUTID_TYPE lutID,DWORD lutAdr,DWORD val,LUT_PORTION_TYPE lutPortion);
void IFCCALL CICamera_LinearizeLut(CICamera *pCamera,LUTID_TYPE lutID,LUT_PORTION_TYPE lutPortion);
void IFCCALL CICamera_FloodLUT(CICamera *pCamera,LUTID_TYPE lutID,DWORD val,LUT_PORTION_TYPE lutPortion);
void IFCCALL CICamera_InvertLut(CICamera *pCamera,LUTID_TYPE lutID, LUT_PORTION_TYPE lutPortion);
void IFCCALL CICamera_ThresholdLut(CICamera *pCamera,LUTID_TYPE lutID, const DWORD dwThreshold, LUT_PORTION_TYPE lutPortion);
void IFCCALL CICamera_OffsetLut(CICamera *pCamera,LUTID_TYPE lutID, const long lOffset, LUT_PORTION_TYPE lutPortion);
void IFCCALL CICamera_RgbToHsiLUT(CICamera *pCamera,LUTID_TYPE lutID, LUT_PORTION_TYPE lutPortion);
void IFCCALL CICamera_GetLUTCaps(CICamera *pCamera,LPLUTCAP caps);
void IFCCALL CICamera_SetLutPathPage(CICamera *pCamera,LUTID_TYPE lutID,IFC_LUT_PIX_SIZE_TYPE pxSize,DWORD pageNum);
void IFCCALL CICamera_SetLutHostPage(CICamera *pCamera,LUTID_TYPE lutID,IFC_LUT_PIX_SIZE_TYPE pxSize,DWORD pageNum,BOOL leftJustify);
void IFCCALL CICamera_SetWindowGen(CICamera *pCamera,short x, short y, short dx, short dy);
BOOL IFCCALL CICamera_SetCameraType(CICamera *pCamera,pSTRING camName,BOOL updateHW);
pSTRING IFCCALL CICamera_GetNextCamType(CICamera *pCamera);
pSTRING IFCCALL CICamera_GetFirstCamType(CICamera *pCamera);
int IFCCALL CICamera_Freeze(CICamera *pCamera);
int IFCCALL CICamera_FreezeEx(CICamera *pCamera, HIFCGRAB grabID);
void IFCCALL CICamera_Snap(CICamera *pCamera);
void IFCCALL CICamera_Grab(CICamera *pCamera);
BOOL IFCCALL CICamera_Grab_HostBuf(CICamera *pCamera,pBYTE dest, int ringNumFrames,int totalNumFrames, short x, short y, short dx, short dy);
HIFCGRAB IFCCALL CICamera_Grab_HostBufEx(CICamera *pCamera, DWORD dwOptions, pBYTE dest, int ringNumFrames,int totalNumFrames, short x, short y, short dx, short dy);
void IFCCALL CICamera_GrabLock(CICamera *pCamera,int seqNum);
void IFCCALL CICamera_GrabLockEx(CICamera *pCamera, HIFCGRAB grabID, int seqNum);
void IFCCALL CICamera_GrabRelease(CICamera *pCamera,int seqNum);
void IFCCALL CICamera_GrabReleaseEx(CICamera *pCamera, HIFCGRAB grabID, int seqNum);
int IFCCALL CICamera_GrabWaitFrame(CICamera *pCamera,BYTE **frameAddr, int FrameSeqNum, DWORD milliseconds, BOOL lock,DWORD *acquiredDy );
int IFCCALL CICamera_GrabWaitFrameEx(CICamera *pCamera,HIFCGRAB grabID,BYTE **frameAddr, int FrameSeqNum, DWORD milliseconds, BOOL lock, DWORD *acquiredDy , GRAB_EXT_ATTR *ExtendedAttr );
int IFCCALL CICamera_GrabFrameSeqNum(CICamera *pCamera,int frameRingNum);
int IFCCALL CICamera_GrabFrameSeqNumEx(CICamera *pCamera, HIFCGRAB grabID, int frameRingNum);
BOOL IFCCALL CICamera_GetGrabStats(CICamera *pCamera, HIFCGRAB grabID,IFC_GRAB_STATS *stats);
BOOL IFCCALL CICamera_GrabGetExtAttr(CICamera *pCamera, HIFCGRAB grabID, int seqNum, GRAB_EXT_ATTR *ExtendedAttr);
BOOL IFCCALL CICamera_Snap_HostBuf(CICamera *pCamera, pBYTE dest,short x, short y, short dx, short dy);
BOOL IFCCALL CICamera_SeqSnap(CICamera *pCamera, pBYTE dest, int numFrames,short x, short y, short dx, short dy, DWORD dwMilliseconds);
pBYTE IFCCALL CICamera_SeqSnapPhys(CICamera *pCamera, DWORD numFrames, DWORD destOffset, short x, short y, short dx, short dy, DWORD dwMilliseconds, DWORD *acquiredDys);
int IFCCALL CICamera_WaitPhysFrame(CICamera *pCamera, BYTE **frameAddr, int FrameSeqNum, DWORD dwMilliseconds,DWORD *acquiredDy);
    
BOOL IFCCALL CICapMod_GetGrabPhysStats(CICapMod *capMod, IFC_GRABPHYS_STATS *stats);