ncap/Ifc58/examples/VB/Ifcapi.bas


Public Type GRAB_EXT_ATTR
        ArrivalTime As Double
        FrameSeqNum As Long
        FrameIsLocked As Long
        potentiallyBad As Long
End Type

Enum IFC_HW_PARAMS
    IFC_HW_ART_REV
    IFC_HW_ECO
    IFC_HW_SERIAL_NUM
    IFC_HW_DISP_KIND
    IFC_BRD_KIND
End Enum

Enum IFC_DEPTH
    IFC_PIX8 = 8
    IFC_PIX10 = 10
    IFC_PIX12 = 12
    IFC_PIX16 = 16
    IFC_PIX24 = 24
    IFC_PIX32 = 32
End Enum

Enum IFC_COLOR
    IFC_MONO
    IFC_RED
    IFC_GREEN
    IFC_BLUE
    IFC_RGB
    IFC_RGB_PACK24
    IFC_MONO_WORD_LO
    IFC_MONO_WORD_HI
    IFC_RGB_PLANAR
    IFC_aRGB_PLANAR
    IFC_YCRCB
    IFC_YCRCBMONO
    IFC_NUM_COLOR_MODES ' Always keep last
End Enum

'typedef void *HIFCGRAB;


'/* Field status defines */
Enum IFC_FIELD_STATUS
    IFC_EVEN_FIELD '                       /* Field status is even */
    IFC_ODD_FIELD '                        /* Field status is odd */
    IFC_NEXT_FIELD '                       /* Next field acquisition */
End Enum

'/* Scan Mode status defines */
Enum IFC_ILACE
    IFC_NILACED '    /* Scan Mode is No interlace */
    IFC_ILACED  '    /* Scan Mode is Interlaced */
End Enum


Declare Sub CICamera_ReleaseCamFrame Lib "ifcapi.dll" (ByVal pCamera As Long, ByVal pFrame As Long)
Declare Function CICamera_GetCamFrame Lib "ifcapi.dll" (ByVal pCamera As Long) As Long
Declare Function CICamera_CreateInterruptObject Lib "ifcapi.dll" (ByVal pCamera As Long, ByVal intrEvent As ICAP_INTR_EVENT) As Long
Declare Sub CICamera_UpdateParams Lib "ifcapi.dll" (ByVal pCamera As Long)
Declare Function CICamera_AcqParamSupported Lib "ifcapi.dll" (ByVal pCamera As Long, ByVal paramID As Long) As Integer
Declare Function CICamera_GetAcqParam Lib "ifcapi.dll" (ByVal pCamera As Long, ByVal paramID As Long, ByVal index As Long) As Double
Declare Sub CICamera_SetAcqParam Lib "ifcapi.dll" (ByVal pCamera As Long, ByVal paramID As Long, ByVal value As Double, ByVal index As Long)
'Declare Sub CICamera_GetParamCaps lib "ifcapi.dll" (ByVal pCamera As Long,ByVal paramID As Long,PIFC_PARAM_CAPS lpParamCaps)
Declare Function CICamera_GetFirstParam Lib "ifcapi.dll" (ByVal pCamera As Long, ByVal paramGroupMask As Long) As Integer
Declare Function CICamera_GetNextParam Lib "ifcapi.dll" (ByVal pCamera As Long, ByVal paramID As Long, ByVal paramGroupMask As Long) As Integer
Declare Function CICamera_GetFirstParamGroup Lib "ifcapi.dll" (ByVal pCamera As Long) As IFC_PARAM_GROUP_TYPE
Declare Function CICamera_GetNextParamGroup Lib "ifcapi.dll" (ByVal pCamera As Long, ByVal groupID As IFC_PARAM_GROUP_TYPE) As IFC_PARAM_GROUP_TYPE
'Declare Sub CICamera_GetGroupProperties lib "ifcapi.dll" (ByVal pCamera As Long,ByVal groupID As IFC_PARAM_GROUP_TYPE ,PIFC_PARAM_GROUP_PROPS lpGroupProps)
Declare Function CICamera_GetFirstEnumArg Lib "ifcapi.dll" (ByVal pCamera As Long, ByVal paramID As Long, ByRef arg As IFC_ENUM_ARG) As Integer
Declare Function CICamera_GetNextEnumArg Lib "ifcapi.dll" (ByVal pCamera As Long, ByVal paramID As Long, ByRef arg As IFC_ENUM_ARG) As Integer
Declare Function CICamera_IsArgSupported Lib "ifcapi.dll" (ByVal pCamera As Long, ByVal paramID As Long, ByVal arg As Double) As Integer
Declare Function CICamera_ClosestArgSupported Lib "ifcapi.dll" (ByVal pCamera As Long, ByVal paramID As Long, ByVal arg As Double) As Double
Declare Function CICamera_GetArgName Lib "ifcapi.dll" (ByVal pCamera As Long, ByVal paramID As Long, ByVal dArg As Double) As Long
Declare Function CICamera_GetArgValue Lib "ifcapi.dll" (ByVal pCamera As Long, ByVal paramID As Long, ByVal szArgName As String) As Double
Declare Function CICamera_SetLutSub Lib "ifcapi.dll" (ByVal pCamera As Long, ByVal lutIS As LUTID_TYPE, ByVal func As Long, ByRef constants As Long, ByVal lutPortion As LUT_PORTION_TYPE) As Integer
Declare Sub CICamera_ReadLutBuf Lib "ifcapi.dll" (ByVal pCamera As Long, ByVal lutIS As LUTID_TYPE, ByVal lutAdr As Long, ByVal numEntries As Long, ByRef buf As Byte, ByVal lutPortion As LUT_PORTION_TYPE)
Declare Sub CICamera_WriteLutBuf Lib "ifcapi.dll" (ByVal pCamera As Long, ByVal lutIS As LUTID_TYPE, ByVal lutAdr As Long, ByVal numEntries As Long, ByRef buf As Byte, ByVal lutPortion As LUT_PORTION_TYPE)
Declare Function CICamera_ReadLutLoc Lib "ifcapi.dll" (ByVal pCamera As Long, ByVal lutIS As LUTID_TYPE, ByVal lutAdr As Long, ByVal lutPortion As LUT_PORTION_TYPE) As Long
Declare Sub CICamera_WriteLutLoc Lib "ifcapi.dll" (ByVal pCamera As Long, ByVal lutIS As LUTID_TYPE, ByVal lutAdr As Long, ByVal val As Long, ByVal lutPortion As LUT_PORTION_TYPE)
Declare Sub CICamera_LinearizeLut Lib "ifcapi.dll" (ByVal pCamera As Long, ByVal lutIS As LUTID_TYPE, ByVal lutPortion As LUT_PORTION_TYPE)
Declare Sub CICamera_FloodLUT Lib "ifcapi.dll" (ByVal pCamera As Long, ByVal lutIS As LUTID_TYPE, ByVal val As Long, ByVal lutPortion As LUT_PORTION_TYPE)
Declare Sub CICamera_InvertLut Lib "ifcapi.dll" (ByVal pCamera As Long, ByVal lutIS As LUTID_TYPE, ByVal lutPortion As LUT_PORTION_TYPE)
Declare Sub CICamera_ThresholdLut Lib "ifcapi.dll" (ByVal pCamera As Long, ByVal lutIS As LUTID_TYPE, ByVal dwThreshold As Long, ByVal lutPortion As LUT_PORTION_TYPE)
Declare Sub CICamera_OffsetLut Lib "ifcapi.dll" (ByVal pCamera As Long, ByVal lutIS As LUTID_TYPE, ByVal lOffset As Long, ByVal lutPortion As LUT_PORTION_TYPE)
Declare Sub CICamera_RgbToHsiLUT Lib "ifcapi.dll" (ByVal pCamera As Long, ByVal lutIS As LUTID_TYPE, ByVal lutPortion As LUT_PORTION_TYPE)
'Declare Sub CICamera_GetLUTCaps lib "ifcapi.dll" (ByVal pCamera As Long,LPLUTCAP caps)
'Declare Sub CICamera_SetLutPathPage lib "ifcapi.dll" (ByVal pCamera As Long,ByVal lutIS As LUTID_TYPE,IFC_LUT_PIX_SIZE_TYPE pxSize,ByVal pageNum As Long)
'Declare Sub CICamera_SetLutHostPage lib "ifcapi.dll" (ByVal pCamera As Long,ByVal lutIS As LUTID_TYPE,IFC_LUT_PIX_SIZE_TYPE pxSize,ByVal pageNum As Long,ByVal leftJustify As Boolean)
Declare Sub CICamera_SetWindowGen Lib "ifcapi.dll" (ByVal pCamera As Long, ByVal x As Integer, ByVal y As Integer, ByVal dx As Integer, ByVal dy As Integer)
Declare Function CICamera_SetCameraType Lib "ifcapi.dll" (ByVal pCamera As Long, ByVal camName As String, ByVal updateHW As Boolean) As Integer
Declare Function CICamera_GetNextCamType Lib "ifcapi.dll" (ByVal pCamera As Long) As Long
Declare Function CICamera_GetFirstCamType Lib "ifcapi.dll" (ByVal pCamera As Long) As Long
Declare Function CICamera_Freeze Lib "ifcapi.dll" (ByVal pCamera As Long) As Integer
Declare Function CICamera_FreezeEx Lib "ifcapi.dll" (ByVal pCamera As Long, ByVal grabID As Long) As Integer
Declare Sub CICamera_Snap Lib "ifcapi.dll" (ByVal pCamera As Long)
Declare Sub CICamera_Grab Lib "ifcapi.dll" (ByVal pCamera As Long)
Declare Function CICamera_Grab_HostBuf Lib "ifcapi.dll" (ByVal pCamera As Long, ByRef dest As Byte, ByVal ringNumFrames As Long, ByVal totalNumFrames As Long, ByVal x As Integer, ByVal y As Integer, ByVal dx As Integer, ByVal dy As Integer) As Long
Declare Function CICamera_Grab_HostBufEx Lib "ifcapi.dll" (ByVal pCamera As Long, ByVal dwOptions As Long, ByRef dest As Byte, ByVal ringNumFrames As Long, ByVal totalNumFrames As Long, ByVal x As Integer, ByVal y As Integer, ByVal dx As Integer, ByVal dy As Integer) As Long
Declare Sub CICamera_GrabLock Lib "ifcapi.dll" (ByVal pCamera As Long, ByVal seqnum As Long)
Declare Sub CICamera_GrabLockEx Lib "ifcapi.dll" (ByVal pCamera As Long, ByVal grabID As Long, ByVal seqnum As Long)
Declare Sub CICamera_GrabRelease Lib "ifcapi.dll" (ByVal pCamera As Long, ByVal seqnum As Long)
Declare Sub CICamera_GrabReleaseEx Lib "ifcapi.dll" (ByVal pCamera As Long, ByVal grabID As Long, ByVal seqnum As Long)
Declare Function CICamera_GrabWaitFrame Lib "ifcapi.dll" (ByVal pCamera As Long, ByRef frameAddr As Long, ByVal FrameSeqNum As Long, ByVal milliseconds As Long, ByVal lockFrame As Long, ByRef acquiredDy As Long) As Long
Declare Function CICamera_GrabWaitFrameEx Lib "ifcapi.dll" (ByVal pCamera As Long, ByVal grabID As Long, ByRef frameAddr As Long, ByVal FrameSeqNum As Long, ByVal milliseconds As Long, ByVal lockFrame As Long, ByRef acquiredDy As Long, ByRef ExtendedAttr As Long) As Long
Declare Function CICamera_GrabFrameSeqNum Lib "ifcapi.dll" (ByVal pCamera As Long, ByVal frameRingNum As Integer) As Integer
Declare Function CICamera_GrabFrameSeqNumEx Lib "ifcapi.dll" (ByVal pCamera As Long, ByVal grabID As Long, ByVal frameRingNum As Integer) As Integer
Declare Function CICamera_GetGrabStats Lib "ifcapi.dll" (ByVal pCamera As Long, ByVal grabID As Long, ByRef stats As IFC_GRAB_STATS) As Integer
Declare Function CICamera_GrabGetExtAttr Lib "ifcapi.dll" (ByVal pCamera As Long, ByVal grabID As Long, ByVal seqnum As Long, ByRef ExtendedAttr As GRAB_EXT_ATTR) As Integer

Declare Function CICamera_Snap_HostBuf Lib "ifcapi.dll" (ByVal pCamera As Long, ByRef dest As Byte, ByVal x As Integer, ByVal y As Integer, ByVal dx As Integer, ByVal dy As Integer) As Integer
Declare Function CICamera_SeqSnap Lib "ifcapi.dll" (ByVal pCamera As Long, ByRef dest As Byte, ByVal numFrames As Integer, ByVal x As Integer, ByVal y As Integer, ByVal dx As Integer, ByVal dy As Integer, ByVal dwMilliseconds As Long) As Integer
Declare Function CICamera_SeqSnapPhys Lib "ifcapi.dll" (ByVal pCamera As Long, ByVal numFrames As Long, ByVal destOffset As Long, ByVal x As Integer, ByVal y As Integer, ByVal dx As Integer, ByVal dy As Integer, ByVal dwMilliseconds As Long, ByRef acquiredDys As Long) As Long
Declare Function CICamera_WaitPhysFrame Lib "ifcapi.dll" (ByVal pCamera As Long, ByRef frameAddr As Long, ByVal FrameSeqNum As Long, ByVal dwMilliseconds As Long, ByRef acquiredDy As Long) As Long
Declare Function CICapMod_GetGrabPhysStats Lib "ifcapi.dll" (ByVal pCamera As Long, ByRef stats As IFC_GRABPHYS_STATS) As Long

